--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ select:focus, input:focus {
     <div class="checkmark">&#10003;</div>
     <div class="title">Order Placed Successfully</div>
     <div class="message">Your Order ID is <span id="order-id"></span>. The name on the order is <span id="name1"></span>. You will get notifications when your drink is in progress and when it is ready!</div>
-    <div class="subtitle">Please keep the app open!</div>
+    <div class="title">Please keep this website open!</div>
     <button onclick="closePopup('success-popup')">Close</button>
 </div>
 
