--- a/staffpos1.html
+++ b/staffpos1.html
@@ -289,7 +289,7 @@ async function acceptOrder(id) {
 async function completeOrder(id) {
     const { data, error } = await supabase
         .from('orders')
-        .delete()
+        .update({ status: 'complete' })
         .match({ id });
 
     if (error) {
